# TFGacel

./: .gitignore  README.md  box_counting_results  comando  links
box_counting/: box_counting_results.xlsx
box_counting/models/: box.ply  terrain_0.6.ply  terrain_0.7.ply  terrain_0.7.ply.out  terrain_0.8.ply.out
box_counting/src/: main.cpp
doc/: apuntes_box_counting.doc
models/: esquina.ply.out  pared.ply.out  taza.ply.out  terrain1.ply  terrain1.ply.out  terrain_0.1.ply.out  terrain_0.1_res.ods  terrain_0.1_res.txt  terrain_0.2.ply  terrain_0.2.ply.out  terrain_0.2_res.txt  terrain_0.3.ply.out  terrain_0.3_res.txt  terrain_0.4.ply.out  terrain_0.4_res.txt  terrain_0.5.ply.out  terrain_0.5_res.txt  terrain_0.6.ply.out  terrain_0.6_res.txt  terrain_0.7.ply.out  terrain_0.7_res.txt  terrain_0.8.ply  terrain_0.8.ply.out  terrain_0.8.ply.out2  terrain_0.8_res.txt  terrain_res.ods
models/Results/: results_incremento_min_eje.ods
models/sierpinski/: sierpinski_1.out  sierpinski_1.ply  sierpinski_2.out  sierpinski_3.out  sierpinski_4.out  sierpinski_4.ply  sierpinski_5.out  sierpinski_6.out  sierpinski_6.ply  sierpinski_7.out  sierpinski_8.out  sierpinski_9.out
models/terrenos_fbm/: script.mlx  terreno_0.5.out  terreno_0.5.ply  terreno_0.6.out  terreno_0.6.ply  terreno_0.7.out  terreno_0.7.ply  terreno_0.8.out  terreno_0.8.ply  terreno_0.9.out  terreno_0.9.ply  terreno_1.0.out  terreno_1.0.ply  terreno_1.1.out  terreno_1.1.ply  terreno_1.2.out  (+11 more)
morfo/: CMakeLists.sublime-workspace  CMakeLists.txt  CMakeLists.txt~  README.txt  main  main.cpp  main.cppOld2  morfosublime-project.sublime-workspace
projects/box_counting/: CMakeLists.txt  compile.sh
projects/box_counting/src/: main.cpp
projects/fractal_generator/src/: CMakeLists.txt  main.cpp
qt_camera_visualizer/: CMakeLists.txt  pcl_Kinect.pro.user.6ceb131
qt_camera_visualizer/forms/: pclKinect.ui
qt_camera_visualizer/include/: MathMorph.h  OFFReader.h  common.h  pclKinect.h
qt_camera_visualizer/lib/: MathMorph.cpp  OFFReader.cpp  common.cpp  pclKinect.cpp
qt_camera_visualizer/src/: main.cpp  pclKinect.cpp
(+35 files in other folders)
